Updated to Facebook Android API v3.5